@@ -1,5 +1,6 @@
 package ua.com.fielden.platform.entity;
 
+import com.google.inject.AbstractModule;
 import com.google.inject.Injector;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.junit.Before;
@@ -12,6 +13,7 @@ import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.IMetaPropertyFactory;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
 import ua.com.fielden.platform.entity.proxy.EntityProxyContainer;
+import ua.com.fielden.platform.entity.validation.DomainValidationConfig;
 import ua.com.fielden.platform.entity.validation.HappyValidator;
 import ua.com.fielden.platform.entity.validation.annotation.ValidationAnnotation;
 import ua.com.fielden.platform.error.Result;
@@ -21,13 +23,16 @@ import ua.com.fielden.platform.reflection.Finder;
 import ua.com.fielden.platform.reflection.TitlesDescsGetter;
 import ua.com.fielden.platform.reflection.test_entities.*;
 import ua.com.fielden.platform.test.CommonTestEntityModuleWithPropertyFactory;
-import ua.com.fielden.platform.test.EntityModuleWithPropertyFactory;
 import ua.com.fielden.platform.types.Money;
 import ua.com.fielden.platform.types.either.Either;
 import ua.com.fielden.platform.types.either.Left;
 
 import java.lang.annotation.Annotation;
-import java.util.*;
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+import java.util.Set;
 
 import static java.lang.String.format;
 import static org.junit.Assert.*;
@@ -47,24 +52,16 @@ import static ua.com.fielden.platform.types.try_wrapper.TryWrapper.Try;
  */
 public class AbstractEntityTest {
     private boolean observedForIncorrectAttempt = false; // used
-    private final EntityModuleWithPropertyFactory module = new CommonTestEntityModuleWithPropertyFactory();
-    {
-        module.getDomainValidationConfig().setValidator(Entity.class, "firstProperty", new HappyValidator());
-        module.getDomainValidationConfig().setValidator(Entity.class, "doubles", new HappyValidator());
-        module.getDomainValidationConfig().setValidator(Entity.class, "number", new HappyValidator() {
-            @Override
-            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
-                if (newValue != null && newValue.equals(35)) {
-                    return new Result(property, new Exception("Domain : Value 35 is not permitted."));
-                } else if (newValue != null && newValue.equals(77)) {
-                    return new Warning("DOMAIN validation : The value of 77 is dangerous.");
-                }
-                return super.handle(property, newValue, mutatorAnnotations);
-            }
-        });
-    }
 
-    private final Injector injector = new ApplicationInjectorFactory().add(module).getInjector();
+    private final Injector injector = new ApplicationInjectorFactory()
+            .add(new CommonTestEntityModuleWithPropertyFactory())
+            .add(new AbstractModule() {
+                @Override
+                protected void configure() {
+                    bind(DomainValidationConfig.class).toInstance(newDomainValidationConfig());
+                }
+            })
+            .getInjector();
     private final EntityFactory factory = injector.getInstance(EntityFactory.class);
     private Entity entity;
 
@@ -80,18 +77,18 @@ public class AbstractEntityTest {
 
     @Test
     public void testThatObservablePropertyMaintainsOriginalAndPrevValue() {
-        entity.getProperty("observableProperty").setPrevValue(new Double("0.0")); // setting the same value as the current one does not change prev-value
+        entity.getProperty("observableProperty").setPrevValue(BigDecimal.ZERO); // setting the same value as the current one does not change prev-value
         assertEquals("current value must be changed (original value null)", true, entity.getProperty("observableProperty").isChangedFromOriginal());
         assertEquals("current value must be changed (previous value null)", true, entity.getProperty("observableProperty").isChangedFromPrevious());
-        final Double newValue = new Double("22.0");
+        final var newValue = new BigDecimal("22.0");
         entity.setObservableProperty(newValue);
-        assertEquals("Prev property value is incorrect", new Double("0.0"), entity.getProperty("observableProperty").getPrevValue());
+        assertEquals("Prev property value is incorrect", BigDecimal.ZERO, entity.getProperty("observableProperty").getPrevValue());
         assertNull("Original property value is incorrect", entity.getProperty("observableProperty").getOriginalValue());
         assertEquals("Property change count is incorrect", 1, entity.getProperty("observableProperty").getValueChangeCount());
         assertEquals("current value must be changed (original value 1)", true, entity.getProperty("observableProperty").isChangedFromOriginal());
         assertEquals("current value must be changed (previous value 1)", true, entity.getProperty("observableProperty").isChangedFromPrevious());
 
-        entity.setObservableProperty(23.0);
+        entity.setObservableProperty(new BigDecimal("23.0"));
         assertEquals("Prev property value is incorrect", newValue, entity.getProperty("observableProperty").getPrevValue());
         assertNull("Original property value is incorrect", entity.getProperty("observableProperty").getOriginalValue());
         assertEquals("Property change count is incorrect", 2, entity.getProperty("observableProperty").getValueChangeCount());
@@ -129,14 +126,14 @@ public class AbstractEntityTest {
     @Test
     public void final_property_for_non_persistent_entity_can_only_be_assigned_once() {
         assertTrue(entity.getProperty("finalProperty").isEditable());
-        entity.setFinalProperty(60.0);
+        entity.setFinalProperty(new BigDecimal("60.0"));
         assertTrue(entity.getProperty("finalProperty").isValid());
-        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertEquals(new BigDecimal("60.0"), entity.getFinalProperty());
         assertFalse(entity.getProperty("finalProperty").isEditable());
 
-        entity.setFinalProperty(31.0);
+        entity.setFinalProperty(new BigDecimal("31.0"));
         assertFalse(entity.getProperty("finalProperty").isValid());
-        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertEquals(new BigDecimal("60.0"), entity.getFinalProperty());
         assertFalse(entity.getProperty("finalProperty").isEditable());
     }
 
@@ -215,8 +212,8 @@ public class AbstractEntityTest {
 
     @Test
     public void testThatMetaInformationForCollectionalPropertiesIsDeterminedCorrectly() {
-        assertTrue("Property 'doubles' is not recognised as collectional.", entity.getProperty("doubles").isCollectional());
-        assertEquals("Meta-property for 'doubles' has incorrect collectional type.", Double.class, entity.getProperty("doubles").getPropertyAnnotationType());
+        assertTrue("Property 'bigDecimals' is not recognised as collectional.", entity.getProperty("bigDecimals").isCollectional());
+        assertEquals("Meta-property for 'bigDecimals' has incorrect collectional type.", BigDecimal.class, entity.getProperty("bigDecimals").getPropertyAnnotationType());
 
         assertTrue("Property 'entities' is not recognised as collectional.", entity.getProperty("entities").isCollectional());
         assertEquals("Meta-property for 'entities' has incorrect collectional type.", Entity.class, entity.getProperty("entities").getPropertyAnnotationType());
@@ -232,30 +229,30 @@ public class AbstractEntityTest {
      */
     @Test
     public void testThatCollectionalPropertySetterIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        assertEquals("Incorrect number of validators.", 2, doublesProperty.getValidators().size());
-        assertTrue("Should have domain validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
-        assertTrue("Should have not-null validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
-        assertNull("There should be no domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNull("There should be no rquiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        entity.setDoubles(Arrays.asList(new Double[] { 2.0, 3.0 }));
-        entity.setDoubles(Arrays.asList(new Double[] { 2.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        assertEquals("Incorrect number of validators.", 2, bigDecimalsProperty.getValidators().size());
+        assertTrue("Should have domain validation.", bigDecimalsProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
+        assertTrue("Should have not-null validation.", bigDecimalsProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
+        assertNull("There should be no domain validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertNull("There should be no rquiredness validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        entity.setBigDecimals(List.of(new BigDecimal("2.0"), new BigDecimal("3.0")));
+        entity.setBigDecimals(List.of(new BigDecimal("2.0")));
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { 2.0, 3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("2.0"), new BigDecimal("3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be a requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertTrue("Requirendess validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertNotNull("There should be domain validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertNotNull("There should be a requiredness validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requirendess validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
-        entity.setDoubles(null);
-        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        entity.setBigDecimals(null);
+        assertFalse("Requiredness validation result should not be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
     }
 
     /**
@@ -268,28 +265,28 @@ public class AbstractEntityTest {
      */
     @Test
     public void testThatCollectionalPropertyIncrementorIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        entity.setBigDecimals(List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")));
 
-        entity.addToDoubles(2.0);
+        entity.addToBigDecimals(new BigDecimal("2.0"));
 
-        assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
+        assertEquals("Incorrect size for bigDecimals", 3, entity.getBigDecimals().size());
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be a domain validation result.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNotNull("There should be requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertTrue("Requiredness validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertNotNull("There should be a domain validation result.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertNotNull("There should be requiredness validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requiredness validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
-        entity.addToDoubles(null);
-        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
-        assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
-        assertNull("Null value is expected for the last invalid value.", entity.getProperty("doubles").getLastInvalidValue());
+        entity.addToBigDecimals(null);
+        assertFalse("Requiredness validation result should not be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertEquals("Incorrect size for bigDecimals", 3, entity.getBigDecimals().size());
+        assertNull("Null value is expected for the last invalid value.", entity.getProperty("bigDecimals").getLastInvalidValue());
     }
 
     /**
@@ -302,24 +299,24 @@ public class AbstractEntityTest {
      */
     @Test
     public void testThatCollectionalPropertyDecrementorIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        entity.setBigDecimals(List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")));
 
-        entity.removeFromDoubles(-2.0);
+        entity.removeFromBigDecimals(new BigDecimal("-2.0"));
 
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be requiredness validation result.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        assertNotNull("There should be domain validation result at this stage.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertNotNull("There should be requiredness validation result.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED));
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
     }
 
     @Test
@@ -343,29 +340,29 @@ public class AbstractEntityTest {
     @Test
     public void testValidationAndSettingRestrictionInObservableMutator() {
         // preparing
-        final MetaProperty<Double> metaProperty = entity.getProperty("observableProperty");
+        final MetaProperty<BigDecimal> metaProperty = entity.getProperty("observableProperty");
         // 1. test the error recovery by the same value
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         entity.setObservableProperty(null);
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
 
         // 2. test the error recovery by the different value
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         entity.setObservableProperty(null);
-        entity.setObservableProperty(101.0);
+        entity.setObservableProperty(new BigDecimal("101.0"));
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
 
         // 3. collectional property validation/observation tested in previous tests
 
         // 4. test simple property validation/observation invoking for different new/old values :
-        entity.setObservableProperty(100.0);
-        entity.setObservableProperty(101.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
+        entity.setObservableProperty(new BigDecimal("101.0"));
         assertTrue("the property after different value setted have to be valid", metaProperty.isValid());
 
         // 5. test simple property validation/observation not invoking for the same new/old values :
-        entity.setObservableProperty(100.0);
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
+        entity.setObservableProperty(new BigDecimal("100.0"));
         assertTrue("the property after the same value setted have to be valid", metaProperty.isValid());
 
         // 6. test simple property validation/observation in case where it is initialised with NULL at construction time
@@ -426,13 +423,13 @@ public class AbstractEntityTest {
         assertEquals("Incorrect title", "First Property", firstPropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "used for testing", firstPropertyMetaProp.getDesc());
 
-        final MetaProperty<Double> observablePropertyMetaProp = entity.getProperty("observableProperty");
+        final MetaProperty<BigDecimal> observablePropertyMetaProp = entity.getProperty("observableProperty");
         assertTrue("Should be requried", observablePropertyMetaProp.isRequired());
         assertTrue("Should be editable", observablePropertyMetaProp.isEditable());
         assertEquals("Incorrect title", "Observable Property", observablePropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "Observable Property", observablePropertyMetaProp.getDesc());
 
-        final MetaProperty<Double> finalPropertyMetaProp = entity.getProperty("finalProperty");
+        final MetaProperty<BigDecimal> finalPropertyMetaProp = entity.getProperty("finalProperty");
         assertFalse("Should not bevisible", finalPropertyMetaProp.isVisible());
 
         final MetaProperty<String> keyMetaProp = entity.getProperty("key");
@@ -700,7 +697,7 @@ public class AbstractEntityTest {
         entity.setKey("key");
         entity.setDesc("description");
         entity.setMoney(new Money("23.25"));
-        entity.setAdditionalProperty(23.0);
+        entity.setAdditionalProperty(new BigDecimal("23.0"));
 
         final Entity copy = entity.copy(Entity.class);
 
@@ -1214,6 +1211,24 @@ public class AbstractEntityTest {
     public void default_implementation_for_isDirty_does_not_thorow_exceptions_for_instrumented_entities() {
         final Entity entity = factory.newEntity(Entity.class);
         assertTrue(entity.isDirty());
+    }
+
+    private static DomainValidationConfig newDomainValidationConfig() {
+        final var config = new DomainValidationConfig();
+        config.setValidator(Entity.class, "firstProperty", new HappyValidator());
+        config.setValidator(Entity.class, "bigDecimals", new HappyValidator());
+        config.setValidator(Entity.class, "number", new HappyValidator() {
+            @Override
+            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
+                if (newValue != null && newValue.equals(35)) {
+                    return new Result(property, new Exception("Domain : Value 35 is not permitted."));
+                } else if (newValue != null && newValue.equals(77)) {
+                    return new Warning("DOMAIN validation : The value of 77 is dangerous.");
+                }
+                return super.handle(property, newValue, mutatorAnnotations);
+            }
+        });
+        return config;
     }
 
 }
